[package]
name = "sqldatetime"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>", "Yukuan Cao <caoyukuan@sics.ac.cn>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "SQL date/time types written in Rust"
keywords = ["date", "time", "datetime", "timestamp", "SQL"]
repository = "https://github.com/cod-technologies/sqldatetime.git"
homepage = "https://github.com/cod-technologies/sqldatetime"
documentation = "https://docs.rs/sqldatetime/"

[features]
serde = ["serde_crate", "once_cell"]

[dependencies]
thiserror = "1.0.24"
stack-buf = "0.1.6"
serde_crate = { package = "serde", version = "1.0.125", optional = true }
once_cell = { version = "1.7.2", features = ["default", "parking_lot"], optional = true }

[dev-dependencies]
serde_crate = { package = "serde", version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
