[package]
name = "sqldatetime"
version = "0.1.25"
authors = ["David Li <davidli2010@foxmail.com>", "Derek Cao <cao1996@qq.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "SQL date/time types written in Rust"
keywords = ["date", "time", "datetime", "timestamp", "SQL"]
repository = "https://github.com/cod-technologies/sqldatetime.git"
homepage = "https://github.com/cod-technologies/sqldatetime"
documentation = "https://docs.rs/sqldatetime/"

[features]
serde = ["serde_crate", "once_cell", "stack-buf/str"]
oracle = []

[dependencies]
thiserror = "1.0.30"
stack-buf = "0.1.6"
serde_crate = { package = "serde", version = "1.0.136", optional = true }
once_cell = { version = "1.10.0", features = ["default", "parking_lot"], optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }

[dev-dependencies]
bencher = "0.1.5"
serde_crate = { package = "serde", version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
